# mlops-ing3

.github/workflows/: tp1_train_push_house_image.yml  train_and_push_house_image.yml
tp1/: Dockerfile  README.md  docker-compose.yml  model_app.py  pyproject.toml  requirements.txt  train_model.py  web_service.py
tp2-kafka/: pyproject.toml
tp2-kafka-partitions/: admin.py  consumer1.py  consumer2.py  producer.py
tp2-kafka/ex1/: consumer.py  producer.py
tp2-kafka/ex2/: consumer_json.py
tp2-kafka/ex3/: consumer.py  process_and_resend.py  producer_json.py
tp2-kafka/model_prod/: consumer.py  process_and_resend.py  producer.py
tp3-mlflow/: Dockerfile  README.md  app.py  docker-compose.yml  iris_training.py  requirements.txt  test_app.py  test_deployed.py
tp4-datadrift/: 2024_Drift_model_and_retraining.ipynb
tp7-quantization/: mnisting.ipynb  quant.ipynb
